[package]
name = "serde_jce"
version = "0.1.0"
authors = ["Simon Chen <1020359403@qq.com>"]
edition = "2021"
rust-version = "1.56"
description = "Jce format support for serde-rs"
documentation = "https://docs.rs/serde_jce"
homepage = "https://github.com/Simon-Chenzw/serde_jce"
repository = "https://github.com/Simon-Chenzw/serde_jce"
license = "MIT"
keywords = ["jce", "serde", "serialization"]
categories = ["encoding"]

[dependencies]
serde = "1.0"
base64 = "0.13"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
hex-literal = "0.3"
